# endless-sky-multiplayer-test

./: .gitignore  PHASE_2.1_COMPLETE.md  PHASE_2.2_COMPLETE.md  PHASE_2.3_COMPLETE.md  PHASE_2.4_COMPLETE.md  PHASE_2.5_COMPLETE.md  PHASE_3.1_COMPLETE.md  PHASE_3.2_COMPLETE.md  PHASE_3.3_COMPLETE.md  PHASE_TRACKER.md  README.md
source/: CMakeLists.txt  ClientState.cpp  ClientState.h  Engine.cpp  Engine.h  GameState.cpp  GameState.h  Renderer.cpp  Renderer.h  Ship.cpp  Ship.h  main.cpp
source/client/: ClientReconciliation.cpp  ClientReconciliation.h  ConnectionMonitor.cpp  ConnectionMonitor.h  EntityInterpolator.cpp  EntityInterpolator.h  MultiplayerClient.cpp  MultiplayerClient.h
source/multiplayer/: CollisionAuthority.cpp  CollisionAuthority.h  CommandBuffer.cpp  CommandBuffer.h  CommandValidator.cpp  CommandValidator.h  DeadReckoning.cpp  DeadReckoning.h  InterestManager.cpp  InterestManager.h  NetworkPlayer.cpp  NetworkPlayer.h  PlayerCommand.h  PlayerManager.cpp  PlayerManager.h  PlayerRegistry.cpp  PlayerRegistry.h  Predictor.cpp  Predictor.h  ProjectileSync.cpp  ProjectileSync.h  StateSync.cpp  StateSync.h
source/server/: Server.cpp  Server.h  ServerConfig.cpp  ServerConfig.h  ServerLoop.cpp  ServerLoop.h  ServerMain.cpp  SnapshotManager.cpp  SnapshotManager.h
tests/: CMakeLists.txt
tests/client/: CMakeLists.txt  test_client_integration.cpp
tests/phase2/: CMakeLists.txt  test_command_pipeline.cpp  test_game_state_separation.cpp  test_player_management.cpp
tests/phase3/: CMakeLists.txt  test_engine_multiplayer.cpp  test_projectile_sync.cpp  test_ship_state_sync.cpp
tests/server/: CMakeLists.txt  test_server_integration.cpp
